@@ -1,7 +1,8 @@
 2.5 (Upcoming 2022)
 
-o Text added in existing fonts is now encoding-aware (plus new raw mode)
 o New operation -print-font-encoding
+o Can now search for a font by real name with -font
+o Text added in existing fonts is now encoding-aware (plus new raw mode)
 o New -print-dict-entry operation prints values for a given key
 o Extend -remove-dict-entry to allow search
 o New -replace-dict-entry function to search & replace e.g URLs
